--- a/views/despesa.html
+++ b/views/despesa.html
@@ -1,68 +1,120 @@
 <!-- Despesa -->
-<ul class="menu">
-	<li><a href="#">Home</a></li>
-	<li><a href="#">Despesas</a></li>
-	<li><a href="#">Recebimentos</a></li>
-	<li><a href="#">Sair</a></li>
-</ul>
-<div class="container">
+<div class="container-fluid">
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-md-4">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h4>Despesas</h4>
+					Lista de Despesas
 				</div>
 				<div class="panel-body">
-					<table class="table table-bordered">
+					<table class="table table-bordered table-striped">
 						<thead>
 							<tr>
 								<td>ID</td>
 								<td>Data Aquisição</td>
-								<td>Descrição</td>
-								<td>Dia do vencimento</td>
+								<td>Dia Vencimento</td>
 								<td>Prestações</td>
 							</tr>
 						</thead>
-						<tbody>
-							<tr ng-repeat="obj in despesas">
-								<td ng-bind="obj.id"></td>
-								<td ng-bind="obj.dataaquisicao"></td>
-								<td ng-bind="obj.descricao"></td>
-								<td ng-bind="obj.prestacoes"></td>
-							</tr>
-						</tbody>
 					</table>
 				</div>
 			</div>
 		</div>
-		<div class="col-md-6">
+		<div class="col-md-8">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h4>Detalhes</h4>
+					Cadastro de Despesas
 				</div>
 				<div class="panel-body">
-					<table class="table table-bordered">
-						<thead>
-							<tr>
-								<td>ID</td>
-								<td>Descrição</td>
-								<td>Valor</td>
-								<td>Quantidade</td>
-							</tr>
-						</thead>
-						<tbody>
-							<tr ng-repeat="obj in despesas">
-								<td ng-bind="obj.id"></td>
-								<td ng-bind="obj.dataaquisicao"></td>
-								<td ng-bind="obj.descricao"></td>
-								<td ng-bind="obj.prestacoes"></td>
-							</tr>
-						</tbody>
-					</table>
+					<form name="form" class="form" role="form">
+						<h3>Período</h3>
+						<hr>
+						<div class="row">
+							<div class="col-md-4">
+								<div class="form-group">
+								 	<label class="label-control">Data Aquisição</label>
+									<input type="text" class="form-control" name="dataaquisicao" ng-model="despesa.dataaquisicao" ng-required="true">
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="form-group">
+								 	<label class="label-control">Dia Vencimento</label>
+									<input type="text" class="form-control" name="diavencimento" ng-model="despesa.diavencimento"  ng-required="true">
+								</div>
+							</div>
+							<div class="col-md-4">
+							 	<div class="form-group">
+							 		<label class="label-control">Prestações</label>
+							 		<input type="text" class="form-control" name="prestacoes" ng-model="despesa.prestacoes"  ng-required="true">
+							 	</div>
+						 	</div>
+						</div>
+						<h3>Itens da Despesa</h3>
+						<hr>
+						<div class="row">
+							<div class="col-md-4">
+								<div class="form-group">
+								 	<label class="label-control">Descrição</label>
+									<input type="text" class="form-control" name="descricao" ng-model="item.descricao">
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="form-group">
+								 	<label class="label-control">Valor Unitário</label>
+									<input type="text" class="form-control" name="valor" ng-model="item.valor">
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="form-group">
+								 	<label class="label-control">Quantidade</label>
+									<input type="text" class="form-control" name="quantidade" ng-model="item.quantidade">
+								</div>
+							</div>
+							<div class="col-md-2">
+								<br>
+								<button class="btn btn-primary" type="button" ng-click="addItem(item)"><i class="fa fa-plus"></i> Adicionar Item</button>
+							</div>
+						</div>
+
+						<div class="bg-danger btn-lg" ng-if="!despesa.itens">
+							<span class="text-danger">
+								Nenhuma despesa cadastrada
+							</span>
+						</div>
+
+						<table class="table table-bordered table-striped">
+							<thead>
+								<tr>
+									<td>ID</td>
+									<td>Descrição</td>
+									<td>Valor</td>
+									<td>Quantidade</td>
+									<td>Ações</td>
+								</tr>
+							</thead>
+							<tbody>
+								<tr ng-repeat="obj in despesa.itens" ng-if="despesa.itens">
+									<td ng-bind="obj.id"></td>
+									<td ng-bind="obj.descricao"></td>
+									<td ng-bind="obj.valor"></td>
+									<td ng-bind="obj.quantidade"></td>
+									<td>
+										<div class="btn-group">
+											<button class="btn btn-warning" title="Editar"><i class="fa fa-pencil"></i></button>
+											<button class="btn btn-danger" title="Deletar"><i class="fa fa-trash"></i></button>
+										</div>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+
+						<hr>
+						<button class="btn btn-success pull-rigth" type="button" ng-click="salvar()" ng-disabled="form.$invalid || despesa.itens.length<=0">Salvar Despesa</button>
+						<button class="btn btn-danger pull-rigth" type="button" ng-click="cancelar()">Cancelar</button>
+					</form>
 				</div>
 			</div>
-		</div>
-		</div>
+		</div>	
 	</div>
 	
 </div>
