--- a/views/despesa.html
+++ b/views/despesa.html
@@ -1,52 +1,57 @@
 <!-- Despesa -->
-<div class="container-fluid">
+<div class="container">
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-md-12" ng-if="!nova">
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					Lista de Despesas
 				</div>
 				<div class="panel-body">
-					<table class="table table-bordered table-striped">
+					<div class="bg-danger btn-lg" ng-if="!despesas">
+						<span class="text-danger">Nenhuma despesa registrada</span>
+					</div>
+					<table class="table table-bordered table-striped"  ng-if="despesas">
 						<thead>
 							<tr>
 								<td>ID</td>
 								<td>Descrição</td>
 								<td>Data Aquisição</td>
-								<td>Dia Vencimento</td>
+								<td>Vencimento</td>
 								<td>Prestações</td>
 							</tr>
 						</thead>
 					</table>
+					<hr>
+					<button class="btn btn-primary" ng-click="novaDespesa()"><i class="fa fa-plus"></i> Nova despesa</button>
 				</div>
 			</div>
 		</div>
-		<div class="col-md-6">
+		<div class="col-md-12" ng-if="nova">
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					Cadastro de Despesas
 				</div>
 				<div class="panel-body">
 					<form name="form" class="form" role="form">
-						<h3>Período</h3>
-						<hr>
 						<div class="row">
-							<div class="col-md-4">
+							<div class="col-md-12">
 								<div class="form-group">
 								 	<label class="label-control">Descrição</label>
 									<input type="text" class="form-control" name="descricao" ng-model="despesa.descricao" ng-required="true">
 								</div>
 							</div>
-							<div class="col-md-4">
+						</div>
+						<div class="row">
+							<div class="col-md-2">
 								<div class="form-group">
-								 	<label class="label-control">Data Aquisição</label>
-									<input type="text" class="form-control" name="dataaquisicao" ng-model="despesa.dataaquisicao" ng-required="true">
+								 	<label class="label-control">Valor Unitário</label>
+									<input type="text" class="form-control" name="valor" ng-model="despesa.valor">
 								</div>
 							</div>
 							<div class="col-md-2">
 								<div class="form-group">
-								 	<label class="label-control">Dia Vencimento</label>
-								 	<h-number value="despesa.diavencimento" unit-position="left" min="1" max="31" step="1" ng-model="despesa.diavencimento"></h-number>
+								 	<label class="label-control">Quantidade</label>
+									<h-number value="despesa.quantidade" unit-position="left" min="1" max="9999" step="1" ng-model="despesa.quantidade"></h-number>
 								</div>
 							</div>
 							<div class="col-md-2">
@@ -55,69 +60,26 @@
 							 		<h-number value="despesa.prestacao" unit-position="left" min="1" max="120" step="1" ng-model="despesa.prestacao"></h-number>
 							 	</div>
 						 	</div>
-						</div>
-						<h3>Itens da Despesa</h3>
-						<hr>
-						<div class="row">
-							<div class="col-md-5">
+
+							<div class="col-md-3">
 								<div class="form-group">
-								 	<label class="label-control">Descrição</label>
-									<input type="text" class="form-control" name="descricao" ng-model="item.descricao">
-								</div>
-							</div>
-							<div class="col-md-2">
-								<div class="form-group">
-								 	<label class="label-control">Valor Unitário</label>
-									<input type="text" class="form-control" name="valor" ng-model="item.valor">
-								</div>
-							</div>
-							<div class="col-md-2">
-								<div class="form-group">
-								 	<label class="label-control">Quantidade</label>
-									<h-number value="item.quantidade" unit-position="left" min="1" max="9999" step="1" ng-model="despesa.quantidade"></h-number>
+								 	<label class="label-control">Data Aquisição</label>
+									<input type="text" class="form-control" name="dataaquisicao" ng-model="despesa.dataaquisicao" ng-required="true">
 								</div>
 							</div>
 							<div class="col-md-3">
-								<br>
-								<button class="btn btn-primary" type="button" ng-click="addItem(item)"><i class="fa fa-plus"></i> Adicionar Item</button>
-							</div>
+								<div class="form-group">
+								 	<label class="label-control">1º Vencimento</label>
+								 	<input type="text" class="form-control" name="vencimento" ng-model="despesa.vencimento" ng-required="true">
+								</div>
+							</div>	
 						</div>
-
-						<div class="bg-danger btn-lg" ng-if="despesa.itens.length<=0">
-							<span class="text-danger">
-								Nenhuma item cadastrado
-							</span>
-						</div>
-
-						<table class="table table-bordered table-striped" ng-if="despesa.itens.length>0">
-							<thead>
-								<tr>
-									<td>ID</td>
-									<td>Descrição</td>
-									<td>Valor</td>
-									<td>Quantidade</td>
-									<td>Ações</td>
-								</tr>
-							</thead>
-							<tbody>
-								<tr ng-repeat="obj in despesa.itens" ng-if="despesa.itens">
-									<td ng-bind="obj.id"></td>
-									<td ng-bind="obj.descricao"></td>
-									<td ng-bind="obj.valor"></td>
-									<td ng-bind="obj.quantidade"></td>
-									<td>
-										<div class="btn-group">
-											<button class="btn btn-warning" title="Editar"><i class="fa fa-pencil" ng-click="editaItem(obj)"></i></button>
-											<button class="btn btn-danger" title="Deletar"><i class="fa fa-trash" ng-click="deletaItem(obj)"></i></button>
-										</div>
-									</td>
-								</tr>
-							</tbody>
-						</table>
 
 						<hr>
-						<button class="btn btn-success pull-rigth" type="button" ng-click="salvar(despesa)" ng-disabled="form.$invalid || despesa.itens.length<=0">Salvar Despesa</button>
-						<button class="btn btn-danger pull-rigth" type="button" ng-click="cancelar()">Cancelar</button>
+						<div>
+							<button class="btn btn-success pull-rigth" type="button" ng-click="salvar(despesa)" ng-disabled="form.$invalid">Salvar Despesa</button>
+							<button class="btn btn-danger pull-rigth" type="button" ng-click="cancelar()">Cancelar</button>
+						</div>
 					</form>
 				</div>
 			</div>
