--- a/views/despesa.html
+++ b/views/despesa.html
@@ -70,7 +70,7 @@
 							<div class="col-md-3">
 								<div class="form-group">
 								 	<label class="label-control">1º Vencimento</label>
-								 	<input type="text" class="form-control" name="vencimento" ng-model="despesa.vencimento" ng-required="true">
+								 	<input type="text" class="form-control" name="datavencimento" ng-model="despesa.datavencimento" ng-required="true">
 								</div>
 							</div>	
 						</div>
