--- a/views/despesa.html
+++ b/views/despesa.html
@@ -44,7 +44,7 @@
 						<div class="row">
 							<div class="col-md-2">
 								<div class="form-group">
-								 	<label class="label-control">Valor Unitário</label>
+								 	<label class="label-control">Valor</label>
 									<input type="text" class="form-control" name="valor" ng-model="despesa.valor">
 								</div>
 							</div>
