--- a/views/recebimento.html
+++ b/views/recebimento.html
@@ -1,26 +1,80 @@
 <!-- Recebimentos -->
-<ul class="menu">
-	<li><a href="#">Home</a></li>
-	<li><a href="#">Despesas</a></li>
-	<li><a href="#">Recebimentos</a></li>
-	<li><a href="#">Sair</a></li>
-</ul>
 <div class="container">
 	<div class="row">
-		<div class="col-md-8">
-			<div class="row">
-				<div class="col-md-12">
-					
+		<div class="col-md-12" ng-if="!novo">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					Lista de Recebimentos
+				</div>
+				<div class="panel-body">
+					<div class="bg-danger btn-lg" ng-if="!recebimentos">
+						<span class="text-danger">Nenhum recebimento registrado</span>
+					</div>
+					<table class="table table-bordered table-striped"  ng-if="recebimentos">
+						<thead>
+							<tr>
+								<td>ID</td>
+								<td>Descrição</td>
+								<td>Valor</td>
+								<td>Data Arrecadação</td>
+								<td>Tipo</td>
+								<td>Ativo</td>
+							</tr>
+						</thead>
+					</table>
+					<hr>
+					<button class="btn btn-primary" ng-click="novoRecebimento()"><i class="fa fa-plus"></i> Novo Recebimento</button>
 				</div>
 			</div>
 		</div>
-		<div class="col-md-4">
-			<div class="row">
-				<div class="col-md-12">
-					
+		<div class="col-md-12" ng-if="novo">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					Cadastro de Recebimentos
+				</div>
+				<div class="panel-body">
+					<form name="form" class="form" role="form">
+						<div class="row">
+							<div class="col-md-12">
+								<div class="form-group">
+								 	<label class="label-control">Descrição</label>
+									<input type="text" class="form-control" name="descricao" ng-model="recebimento.descricao" ng-required="true">
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-2">
+								<div class="form-group">
+								 	<label class="label-control">Valor</label>
+									<input type="text" class="form-control" name="valor" ng-model="recebimento.valor">
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="form-group">
+								 	<label class="label-control">Data Arrecadacao</label>
+									<input type="text" class="form-control" name="dataarrecadacao" ng-model="recebimento.dataarrecadacao" ng-required="true">
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="form-group">
+								 	<label class="label-control">Tipo</label>
+								 	<select class="form-control" ng-model="recebimento.tipo">
+								 		<option value="UNICO">Único</option>
+								 		<option value="INDETERMINADO">Indeterminado</option>
+								 	</select>
+								</div>
+							</div>	
+						</div>
+
+						<hr>
+						<div>
+							<button class="btn btn-success pull-rigth" type="button" ng-click="salvar(recebimento)" ng-disabled="form.$invalid">Salvar Despesa</button>
+							<button class="btn btn-danger pull-rigth" type="button" ng-click="cancelar()">Cancelar</button>
+						</div>
+					</form>
 				</div>
 			</div>
-		</div>
+		</div>	
 	</div>
 	
 </div>
