--- a/views/recebimento.html
+++ b/views/recebimento.html
@@ -5,6 +5,7 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					Lista de Recebimentos
+					<i class="fa fa-arrow-down pull-right"></i>
 				</div>
 				<div class="panel-body">
 					<div class="bg-danger btn-lg" ng-if="!recebimentos">
@@ -31,6 +32,7 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					Cadastro de Recebimentos
+					<i class="fa fa-arrow-up pull-right"></i>
 				</div>
 				<div class="panel-body">
 					<form name="form" class="form" role="form">
