--- a/views/home.html
+++ b/views/home.html
@@ -1,26 +1,8 @@
 <!-- Home -->
-<ul class="menu">
-	<li><a href="#">Home</a></li>
-	<li><a href="#">Despesas</a></li>
-	<li><a href="#">Recebimentos</a></li>
-	<li><a href="#">Sair</a></li>
-</ul>
 <div class="container">
 	<div class="row">
-		<div class="col-md-8">
-			<div class="row">
-				<div class="col-md-12">
-					
-				</div>
-			</div>
-		</div>
-		<div class="col-md-4">
-			<div class="row">
-				<div class="col-md-12">
-					
-				</div>
-			</div>
+		<div class="col-md-12" align="center">
+			
 		</div>
 	</div>
-	
 </div>
