--- a/libs/css/style.css
+++ b/libs/css/style.css
@@ -1,6 +1,6 @@
 .menu {
 	position: fixed;
-	bottom: 80;
+	bottom: 50;
 	right: 20;
 }
 .menu > ul {
@@ -18,6 +18,7 @@
 	color: black;
 	border-radius: 50px;
 	font-weight: 700;
+	font-size: 30px;
 }
 .menu > ul > li > a:hover {
 	text-decoration: none;
