--- a/views/despesa.html
+++ b/views/despesa.html
@@ -57,7 +57,7 @@
 							<div class="col-md-2">
 							 	<div class="form-group">
 							 		<label class="label-control">Prestações</label>
-							 		<h-number value="despesa.prestacao" unit-position="left" min="1" max="120" step="1" ng-model="despesa.prestacao"></h-number>
+							 		<h-number value="despesa.prestacoes" unit-position="left" min="1" max="120" step="1" ng-model="despesa.prestacoes"></h-number>
 							 	</div>
 						 	</div>
 
