--- a/views/despesa.html
+++ b/views/despesa.html
@@ -71,7 +71,7 @@
 							<div class="col-md-2">
 								<div class="form-group">
 								 	<label class="label-control">Valor</label>
-									<input type="text" class="form-control" name="valor" ng-model="despesa.valor">
+									<input type="text" class="form-control" name="valor" ng-model="despesa.valor" ng-required="true">
 								</div>
 							</div>
 							<div class="col-md-2">
