--- a/views/home.html
+++ b/views/home.html
@@ -9,17 +9,17 @@
 				<div class="panel-body">
 					<div class="table-responsive">
 					<table class="table table-bordered table-hover">
-						<thead>
+						<!-- <thead>
 							<tr>
 								<td colspan="100">Head</td>
 							</tr>
-						</thead>
+						</thead> -->
 						<tbody>
 							<tr>
 								<td style="background:#afc2f3;">Descrição</td>
 								<td style="background:#afc2f3;">Valor</td>
 								<td style="background:#afc2f3;">Venc</td>
-								<td ng-repeat="mes in meses" style="background:#bce7e6;">{{mes.nome}}</td>
+								<td ng-repeat="mes in meses" style="background:#bce7e6;">{{mes.sigla}}</td>
 								
 							</tr>
 							<tr ng-repeat="despesa in despesas">
@@ -38,11 +38,11 @@
 								</td>
 							</tr>
 						</tbody>
-						<tfoot>
+						<!-- <tfoot>
 							<tr>
 								<td colspan="100">Footer</td>
 							</tr>
-						</tfoot>
+						</tfoot> -->
 					</table>
 					</div>
 				</div>
