--- a/views/home.html
+++ b/views/home.html
@@ -19,6 +19,7 @@
 								<td style="background:#afc2f3;">Descrição</td>
 								<td style="background:#afc2f3;">Valor</td>
 								<td style="background:#afc2f3;">Venc</td>
+								<td style="background:#afc2f3;">Prest</td>
 								<td ng-repeat="mes in meses" style="background:#bce7e6;">{{mes.sigla}}</td>
 								
 							</tr>
@@ -26,11 +27,16 @@
 								<td ng-bind="despesa.descricao"></td>
 								<td ng-bind="despesa.valor"></td>
 								<td ng-bind="despesa.diavencimento"></td>
-								<td ng-repeat="pres in despesa.pres" style="{{pres.color}}">{{pres.valor}}</td>
+								<td ng-bind="despesa.prestacao"></td>
+								<td ng-repeat="pres in despesa.pres" style="{{pres.color}}">
+									{{pres.valor}}
+									<i class="fa" ng-class="pres.icon"></i>
+								</td>
 							</tr>
 							<tr>
 								<td style="background:#afc2f3;">Total</td>
 								<td style="background:#afc2f3;">{{totalgeral}}</td>
+								<td style="background:#afc2f3;"></td>
 								<td style="background:#afc2f3;"></td>
 								<td ng-repeat="total in totais" style="background:#f9e7aa;">
 									{{total.valor}}
