--- a/views/home.html
+++ b/views/home.html
@@ -20,7 +20,7 @@
 								<td style="background:#afc2f3;">Valor</td>
 								<td style="background:#afc2f3;">Venc</td>
 								<td style="background:#afc2f3;">Prest</td>
-								<td ng-repeat="mes in meses" style="background:#bce7e6;">{{mes.sigla}}</td>
+								<td ng-repeat="mes in meses" style="background:#bce7e6;">{{mes.sigla}}({{mes.ano}})</td>
 								
 							</tr>
 							<tr ng-repeat="despesa in despesas">
