--- a/views/home.html
+++ b/views/home.html
@@ -7,6 +7,22 @@
 					Cronograma
 				</div>
 				<div class="panel-body">
+					<!-- <div class="form-group">
+						Selecione o escopo dos meses
+						<select class="form-control">
+							<option value="6">6</option>
+							<option value="12">12</option>
+						</select>
+					</div> -->
+					<div class="row">
+						<div class="col-md-3">
+							<div class="form-group">
+							 	<label class="label-control">Periodo</label>
+							 	<select class="form-control" ng-options="p as p for p in periodos" ng-model="tlmeses" ng-change="changeTlMeses()">
+								</select>
+							</div>
+						</div>
+					</div>
 					<div class="table-responsive">
 					<table class="table table-bordered table-hover">
 						<!-- <thead>
